--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "fs-extra": "^11.3.0",
     "gray-matter": "^4.0.3",
+    "handlebars": "^4.7.8",
     "marked": "^15.0.7",
     "mathjax": "^3.2.2"
   }
