--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "fs-extra": "^11.3.0",
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.8",
+    "jsdom": "^26.1.0",
     "marked": "^15.0.7",
     "mathjax": "^3.2.2"
   }
