--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs-extra": "^11.3.3",
     "gray-matter": "^4.0.3",
     "handlebars": "^4.7.8",
+    "highlight.js": "^11.11.1",
     "jsdom": "^27.4.0",
     "marked": "^17.0.1",
     "mathjax": "^4.1.0"
