--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -20,6 +20,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
 
       - name: Setup Node
         uses: actions/setup-node@v4
@@ -44,6 +46,9 @@ jobs:
 
       - name: Clean
         run: npm run clean
+
+      - name: Ensure clean output
+        run: rm -rf public
 
       - name: Build
         env:
