--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "clean": "node -e \"require('fs').rmSync('public', { recursive: true, force: true })\"",
-    "build:docs": "node _include/generate-documents.js && node _include/generate-index.js && node _include/generate-main.js && node _include/generate-sitemap.js",
+    "build:docs": "node _include/generate-documents.js && node _include/generate-index.js && node _include/generate-main.js && node _include/generate-sitemap.js && node _include/generate-robots.js",
     "build": "npm run clean && npm run build:docs",
     "serve": "npx serve public",
     "test": "echo \"Error: no test specified\" && exit 1"
